Closed
Bug 368921
Opened 19 years ago
Closed 19 years ago
All events in ICS file are not upgraded to new timezones
Categories
(Calendar :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Sunbird 0.3
People
(Reporter: mattwillis, Assigned: mattwillis)
Details
(Whiteboard: [verified0.3.1])
Attachments
(1 file)
|
1.34 KB,
patch
|
dmosedale
:
first-review+
dmosedale
:
second-review+
|
Details | Diff | Splinter Review |
When opening an ICS file and changing one event, the other events are not upgraded to the new 20070129_1 timezones.
STR in Sunbird:
1. File -> Open an ICS file with 20050126_1 timezones and multiple events.
2. Edit one event's title
3. Export the calendar
4. Note that only the edited event's timezone has been updated to 20070129_1
Expected:
All events in the file are updated to the 20070129_1 timezone, and the 20050126_1 timezone is removed from the file.
This happens because we erroneously assumed that calTzId::Assign(char* c) was only called for "utc" and "floating" timezones, and therefore we didn't attempt conversion on it. In actuality, we _do_ pass regular tzIds to it, and so it needs to also convert.
Rather than duplicate the code, we'll just call the other Assign function with c cast to a string.
Flags: blocking-calendar0.3.1+
Attachment #253561 -
Flags: first-review?(dmose)
| Assignee | ||
Comment 1•19 years ago
|
||
Credit to Stefan Sitter for originally finding this.
Comment 2•19 years ago
|
||
Comment on attachment 253561 [details] [diff] [review]
Make Assign(char* c) convert
r1/r2=dmose; nice find!
Attachment #253561 -
Flags: second-review+
Attachment #253561 -
Flags: first-review?(dmose)
Attachment #253561 -
Flags: first-review+
| Assignee | ||
Comment 3•19 years ago
|
||
Patch checked in on:
SUNBIRD_0_3_BRANCH
LIGHTNING_0_3_BRANCH
MOZILLA_1_8_BRANCH
trunk
-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [fixed0.3.1]
VERIFIED on 0.3.1: Lightning: 2007020304 Thunderbird: version 2 beta 2 (20070202).
Sorry for the spam, hit commit too soon. Also verified on 0.3.1 Sunbird: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20070203 Sunbird/0.3.1
Needs verifiying on Mozilla_1_8_branch
| Assignee | ||
Updated•19 years ago
|
Whiteboard: [fixed0.3.1] → [verified0.3.1]
You need to log in
before you can comment on or make changes to this bug.
Description
•