bug 368921 - Be sure to convert all timezones. r1/2=dmose